boulder/boulder/tests/compile_fail/type/unknown_field.bo
struct A {
    a: u32,
    b: u32,
}

fn test(c: A) -> u32 {
    c.d
}